commit for gallery

--- a/AKchatApp/src/index.html
+++ b/AKchatApp/src/index.html
@@ -15,7 +15,7 @@
 
 
 </head>
-<body class="mat-typography">
+<body class="mat-typography" style="position: relative;">
  
 
   <app-root></app-root>
