--- a/AKchatApp/src/index.html
+++ b/AKchatApp/src/index.html
@@ -5,6 +5,8 @@
   <title>AKchatApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -19,7 +21,32 @@
  
 
   <app-root></app-root>
-
+  <script>
+    
+    var sessionStorage_transfer = function(event) {
+      if (!event.newValue) return; // Do nothing if no value to work with
+      if (event.key == 'getSessionStorage') {
+        // Another tab asked for the sessionStorage -> send it
+        localStorage.setItem('sessionStorage', JSON.stringify(sessionStorage));
+        // The other tab should now have it, so we're done with it.
+        localStorage.removeItem('sessionStorage'); // <- Could do a short timeout as well.
+      } else if (event.key == 'sessionStorage' && !sessionStorage.length) {
+        // Another tab sent data <- get it
+        var data = JSON.parse(event.newValue);
+        for (var key in data) {
+          sessionStorage.setItem(key, data[key]);
+        }
+      }
+    };
+    
+  if (window.addEventListener) {
+  window.addEventListener("storage", sessionStorage_transfer, false);
+  }
+  if (!sessionStorage.length) {
+  localStorage.setItem('getSessionStorage', 'foobar');
+  localStorage.removeItem('getSessionStorage');
+  };
+  </script>
  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js" integrity="sha512-hkvXFLlESjeYENO4CNi69z3A1puvONQV5Uh+G4TUDayZxSLyic5Kba9hhuiNLbHqdnKNMk2PxXKm0v7KDnWkYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
@@ -31,3 +58,4 @@
 </body>
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
